# Service_Reservation_System

./: .gitignore  README.md  config.py  db.py  demonstration.txt  main.py  pyproject.toml  requirements.txt
models/: __init__.py  favorite.py  notification.py  reservation.py  review.py  service.py  user.py
routes/: auth.py  favorites.py  notifications.py  reservations.py  reviews.py  services.py
service_reservation_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_admin_methods.py  test_auth.py  test_available_slots.py  test_favorites.py  test_favorites_notifications.py  test_notifications.py  test_provider_methods.py  test_reservation_review.py  test_reservations_routes.py  test_reviews_routes.py  test_service.py  test_services_routes.py  test_user.py
